Deduplicated ThinGL rendering code